@startuml


interface Subject{
    registerObserver()
    removeObserver()
    notifyObservers()
}


class WeatherData{
    registerObserver()
    removeObserver()
    notifyObservers()
}

Subject <|.. WeatherData


interface Observer{
    update()
}

class CurrentConditionDisplay{
    update()
}

class StatisticsDisplay{
    update()
}

Observer <|-- CurrentConditionDisplay
Observer <|-- StatisticsDisplay


Observer <|- Subject: 观察者
CurrentConditionDisplay -> WeatherData: 订阅主题
StatisticsDisplay -> WeatherData: 订阅主题



@enduml